==================================================================
21/12-2014 EMWHBR

*) R1A05

*) Initial version of PIC/PICSIM variant of ASP.

==================================================================
21/12-2014 EMWHBR

*) R1A04

*) Added information on howto install and test SDCC.

==================================================================
6/12-2014 EMWHBR

*) R1A03

*) Modified test application for AT89S52:
   - Multiple source files (main.c, rs232.c and delay.c).
   - Implemented delay functionality using TIMER0.

*) Tested using target microcontroller AT89S52@12MHz.

==================================================================
30/11-2014 EMWHBR

*) R1A02

*) Added functionality to verify the contents of chip flash program
   memory against a specified file in binary/HEX format.

*) Tested using target microcontroller AT89S52@12MHz.

==================================================================
16/11-2014 EMWHBR

*) R1A01

*) Original

*) Tested using target microcontroller AT89S52@12MHz.