@@ -1,0 +1,8 @@
+# PICkit 2 USB device programmer
+# This file should be installed to /etc/udev/rules.d
+# so that you can access the hardware without being root
+#
+# type this at the command prompt:
+# sudo cp 98-pickit2.rules /etc/udev/rules.d
+
+SUBSYSTEM=="usb", ENV{DEVTYPE}=="usb_device", ATTR{idVendor}=="04d8", ATTR{idProduct}=="0033", MODE="0666"
