@@ -1,6 +1,13 @@
 ==================================================================
 21/12-2014 EMWHBR
 
+*) R1A06
+
+*) Added information on howto install and test PICkit2.
+
+==================================================================
+21/12-2014 EMWHBR
+
 *) R1A05
 
 *) Initial version of PIC/PICSIM variant of ASP.
